--- a/Fighting-Cocks-images/Events-Promotions/promotions.html
+++ b/Fighting-Cocks-images/Events-Promotions/promotions.html
@@ -97,14 +97,14 @@
   <main>
     <div class="card-grid">
       <div class="card">
-        <img src="Fighting-Cocks-images/Events-Promotions/Fighting Cocks Rooms DL poster for bill holders.jpg" alt="Book Direct">
+        <img src="Fighting-Cocks-images/Events-Promotions/FC Direct10.jpg" alt="Book Direct">
         <h3>Book Direct</h3>
         <p>Book Direct quoting DIRECT10 to get 10% when reserving a room with us.</p>
       </div>
       <div class="card">
-        <img src="promotions/promo2.jpg" alt="Wine Wednesday">
-        <h3>Wine Wednesday</h3>
-        <p>20% off all bottles of wine, every Wednesday.</p>
+        <img src="Fighting-Cocks-images/Events-Promotions/choc-orange-scaled.jpg" alt="Coffee and Cake for £5">
+        <h3>Coffee and Cake for £5</h3>
+        <p>Just 5£ when you order a slice of cake and a hot beverage.</p>
       </div>
     </div>
   </main>
