--- a/Fighting-Cocks-images/Events-Promotions/promotions.html
+++ b/Fighting-Cocks-images/Events-Promotions/promotions.html
@@ -110,6 +110,6 @@
   </main>
 
 <div class="buttons">
-  <a href="../../fightingcocks.html">⬅ Back to Pub Page</a>
+  <a href="../fightingcocks.html">⬅ Back to Pub Page</a>
   <a href="../../home.html">⬅ Back to Home</a>
 </div>
