--- a/Fighting-Cocks-images/Events-Promotions/promotions.html
+++ b/Fighting-Cocks-images/Events-Promotions/promotions.html
@@ -97,12 +97,12 @@
   <main>
     <div class="card-grid">
       <div class="card">
-        <img src="Fighting-Cocks-images/Events-Promotions/FC Direct10.jpg" alt="Book Direct">
+        <img src="FC Direct10.jpg" alt="Book Direct">
         <h3>Book Direct</h3>
         <p>Book Direct quoting DIRECT10 to get 10% when reserving a room with us.</p>
       </div>
       <div class="card">
-        <img src="Fighting-Cocks-images/Events-Promotions/choc-orange-scaled.jpg" alt="Coffee and Cake for £5">
+        <img src="choc-orange-scaled.jpg" alt="Coffee and Cake for £5">
         <h3>Coffee and Cake for £5</h3>
         <p>Just 5£ when you order a slice of cake and a hot beverage.</p>
       </div>
