--- a/bold-forester-images/Christmas/Bold-Christmas.html
+++ b/bold-forester-images/Christmas/Bold-Christmas.html
@@ -91,13 +91,13 @@
 </head>
 <body>
   <header>
-    <h1>Upcoming Events</h1>
+    <h1>Christmas 2025</h1>
   </header>
 
   <main>
     <div class="card-grid">
       <div class="card">
-        <img src="Italian Week 2025.png" alt="🍝 Italian Week at The Bold Forester – 9th to 15th September">
+        <img src="Bold-Christmas-Party-2025.html" alt="Christmas Party Menu 2025">
         <h3>Italian Week</h3>
         <p>
           Celebrate the passion of Italy with a week full of authentic, flavour-packed Italian classics.
