--- a/boldforester.html
+++ b/boldforester.html
@@ -129,6 +129,7 @@
     <a href="bold-forester-images/bold-forester-menus/sunday-menu/NEW-SUNDAY-MENU-SPRING-SUMMER-2025.html">Sunday Menu</a>
     <a href="bold-forester-images/bold-forester-menus/kids-menu/Tiny-Tums-Menu-2025.html">Kids Menu</a>
     <a href="bold-forester-images/bold-forester-menus/desserts-menu/New-Dessert-Menu-2025.html">Desserts Menu</a>
+    <a href="bold-forester-images/Christmas/Bold-Christmas.html">Christmas Menus 2025</a>
   </div>
 
   <h2>Drink Menus</h2>
