--- a/bold-forester-images/Christmas/Bold-Christmas.html
+++ b/bold-forester-images/Christmas/Bold-Christmas.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Bold Forester – Events</title>
+  <title>The Bold Forester Christmas Menus</title>
   <link rel="stylesheet" href="style.css">
   <style>
     body {
@@ -97,17 +97,24 @@
   <main>
     <div class="card-grid">
       <div class="card">
-        <img src="Bold-Christmas-Party-2025.html" alt="Christmas Party Menu 2025">
-        <h3>Italian Week</h3>
+        <img src="Bold-Christmas-Party-2025.jpg">
+        <h3>Christmas Party Menu 2025</h3>
         <p>
-          Celebrate the passion of Italy with a week full of authentic, flavour-packed Italian classics.
+          Celebrate this festive season with us
         </p>
       </div>
       <div class="card">
-        <img src="National Curry Week 2.png" alt="🌶️ National Curry Week at The Bold Forester – 6th to 12th October">
-        <h3>National Curry Week</h3>
+        <img src="Bold-Christmas-Day-2025.jpg">
+        <h3>Christmas Day Menu 2025</h3>
         <p>
-          Spice up your week with a feast of bold, aromatic curries, from traditional favourites to exciting new twists.
+          Let us do all the cooking
+        </p>
+      </div>
+      <div class="card">
+        <img src="Bold-Christmas-Festive-Feast-2025.jpg">
+        <h3>Christmas Festive Feast Menu 2025</h3>
+        <p>
+          Come and have a Christmas Feast this season
         </p>
       </div>
     </div>
