--- a/Lamb-Inn-images/Christmas/Lamb-Christmas.html
+++ b/Lamb-Inn-images/Christmas/Lamb-Christmas.html
@@ -97,21 +97,21 @@
   <main>
     <div class="card-grid">
       <div class="card">
-        <img src="Bold-Christmas-Party-2025.jpg">
+        <img src="Lamb-Christmas-Party-Menu-2025.jpeg">
         <h3>Christmas Party Menu 2025</h3>
         <p>
           Celebrate this festive season with us
         </p>
       </div>
       <div class="card">
-        <img src="Bold-Christmas-Day-2025.jpg">
+        <img src="Lamb-Christmas-Day-Menu-2025.jpeg">
         <h3>Christmas Day Menu 2025</h3>
         <p>
           Let us do all the cooking
         </p>
       </div>
       <div class="card">
-        <img src="Bold-Christmas-Festive-Feast-2025.jpg">
+        <img src="Lamb-Christmas-Festive-Feast-2025.png">
         <h3>Christmas Festive Feast Menu 2025</h3>
         <p>
           Come and have a Christmas Feast this season
@@ -121,6 +121,6 @@
   </main>
 
 <div class="buttons">
-  <a href="../../boldforester.html">⬅ Back to Pub Page</a>
+  <a href="../../lambinn.html">⬅ Back to Pub Page</a>
   <a href="../../home.html">⬅ Back to Home</a>
 </div>
