--- a/fightingcocks.html
+++ b/fightingcocks.html
@@ -125,11 +125,12 @@
 
   <h2>Food Menus</h2>
   <div class="buttons">
+    <a href="Fighting-Cocks-images/fighting-cocks-menus/breakfast-menu/Fighting-Cocks-new-breakfast-menu.html">Breakfast Menu</a>
     <a href="Fighting-Cocks-images/fighting-cocks-menus/main-menu/new-menu-march-2025.html">Menu</a>
     <a href="Fighting-Cocks-images/fighting-cocks-menus/sunday-menu/new-sunday-menu-march.html">Sunday Menu</a>
     <a href="Fighting-Cocks-images/fighting-cocks-menus/kids-menu/Kids-menu.html">Kids Menu</a>
     <a href="Fighting-Cocks-images/fighting-cocks-menus/desserts-menu/Dessert-ice-cream-menu-march-2025.html">Desserts Menu</a>
-    <a href="Fighting-Cocks-images/fighting-cocks-menus/breakfast-menu/Fighting-Cocks-new-breakfast-menu.html">Breakfast Menu</a>
+    <a href="Lamb-Inn-images/Christmas/Lamb-Christmas.html">Christmas Menus 2025</a>
   </div>
 
   <h2>Drink Menus</h2>
