--- a/fightingcocks.html
+++ b/fightingcocks.html
@@ -158,6 +158,8 @@
 
   <h2>Extras</h2>
   <div class="buttons">
+    <a href="https://thefightingcockspub.co.uk/food/#restaurant_form">Book a Table</a>
+    <a href="https://web-bookings.hotels.uk.com/#/booking/51730/items/availability?k=XbkHpDevv1inahpI6xTpMVzFxNTE3MzA%3D&r=1757344029010">Book a Room</a>
     <a href="https://thefightingcockspub.co.uk/">Official Website</a>
     <a href="home.html">⬅ Back to Home</a>
   </div>
