--- a/Fighting-Cocks-images/Christmas/Fighting-Cocks-Christmas.html
+++ b/Fighting-Cocks-images/Christmas/Fighting-Cocks-Christmas.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Lamb Inn Christmas Menus</title>
+  <title>The Fighting Cocks Christmas Menus</title>
   <link rel="stylesheet" href="style.css">
   <style>
     body {
@@ -97,21 +97,21 @@
   <main>
     <div class="card-grid">
       <div class="card">
-        <img src="Lamb-Christmas-Party-Menu-2025.jpeg">
+        <img src="Fighting-Cocks-Xmas-party-menu-2025.jpg">
         <h3>Christmas Party Menu 2025</h3>
         <p>
           Celebrate this festive season with us
         </p>
       </div>
       <div class="card">
-        <img src="Lamb-Christmas-Day-Menu-2025.jpeg">
+        <img src="Fighting-Cocks-Xmas-Day-menu-2025.jpg">
         <h3>Christmas Day Menu 2025</h3>
         <p>
           Let us do all the cooking
         </p>
       </div>
       <div class="card">
-        <img src="Lamb-Christmas-Festive-Feast-2025.png">
+        <img src="Fighting-Cocks-Xmas-Festive-Feast-menu-2025.jpg">
         <h3>Christmas Festive Feast Menu 2025</h3>
         <p>
           Come and have a Christmas Feast this season
@@ -121,6 +121,6 @@
   </main>
 
 <div class="buttons">
-  <a href="../../lambinn.html">⬅ Back to Pub Page</a>
+  <a href="../../fightingcocks.html">⬅ Back to Pub Page</a>
   <a href="../../home.html">⬅ Back to Home</a>
 </div>
