--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 <div class="container"> 
   <h1>Country Inns</h1>
   <p>
-    Stay connected with all our pubs, menus, and events.<br>
-    Install the app for the best experience or continue to the web version.
+    Stay connected with all our pubs, menus, events, promotions, book a table or a room.<br>
+    Add the App to your home screen for the best experience after continuing to the web version.
   </p>
   <div class="buttons">
     <button class="btn btn-install" id="installBtn" style="display:none;">📲 Install the App</button>
