--- a/Fighting-Cocks-images/Events-Promotions/promotions.html
+++ b/Fighting-Cocks-images/Events-Promotions/promotions.html
@@ -104,7 +104,7 @@
       <div class="card">
         <img src="choc-orange-scaled.jpg" alt="Coffee and Cake for £5">
         <h3>Coffee and Cake for £5</h3>
-        <p>Just 5£ when you order a slice of cake and a hot beverage.</p>
+        <p>Just £5 when you order a slice of cake and a hot beverage.</p>
       </div>
     </div>
   </main>
