--- a/royaloak.html
+++ b/royaloak.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>The Bold Forester – Country Inns</title>
+  <title>The Royal Oak – Country Inns</title>
   <link rel="stylesheet" href="style.css" />
   <style>
     body {
@@ -141,18 +141,18 @@
 </head>
 <body>
   <header>
-    <img src="The Bold Forester.jpg" alt="The Bold Forester Logo" class="logo">
+    <img src="The Royal Oak.png" alt="The Royao Oak Logo" class="logo">
   </header>
 
   <section>
     <div class="about">
-      <p>Welcome to The Bold Forester, Marchwood — a cosy country pub at the heart of the New Forest. Explore our menus, book a table, and see what’s on</p>
+      <p>Welcome to The Royal Oak, Beaulieu — a cosy country pub at the heart of the New Forest. Explore our menus, book a table, and see what’s on</p>
     </div>
   </section>
 
   <h2>Food Menus</h2>
   <div class="buttons">
-    <a href="bold-forester-images/bold-forester-menus/main-menu/NEW-MENU-SPRING-SUMMER-2025.html">Menu</a>
+    <a href="Royal-Oak-images/Royal-Oak-Menus/main-menu/Summer Menu.html">Menu</a>
     <a href="bold-forester-images/bold-forester-menus/sunday-menu/NEW-SUNDAY-MENU-SPRING-SUMMER-2025.html">Sunday Menu</a>
     <a href="bold-forester-images/bold-forester-menus/kids-menu/Tiny-Tums-Menu-2025.html">Kids Menu</a>
     <a href="bold-forester-images/bold-forester-menus/desserts-menu/New-Dessert-Menu-2025.html">Desserts Menu</a>
