--- a/royaloak.html
+++ b/royaloak.html
@@ -153,16 +153,15 @@
   <h2>Food Menus</h2>
   <div class="buttons">
     <a href="Royal-Oak-images/Royal-Oak-Menus/main-menu/Summer Menu.html">Menu</a>
-    <a href="bold-forester-images/bold-forester-menus/sunday-menu/NEW-SUNDAY-MENU-SPRING-SUMMER-2025.html">Sunday Menu</a>
-    <a href="bold-forester-images/bold-forester-menus/kids-menu/Tiny-Tums-Menu-2025.html">Kids Menu</a>
-    <a href="bold-forester-images/bold-forester-menus/desserts-menu/New-Dessert-Menu-2025.html">Desserts Menu</a>
+    <a href="Royal-Oak-images/Royal-Oak-Menus/sunday-menu/Sunday Menu.html">Sunday Menu</a>
+    <a href="Royal-Oak-images/Royal-Oak-Menus/desserts-menu/Dessert Menu ROB.html">Desserts Menu</a>
   </div>
 
   <h2>Drink Menus</h2>
   <div class="buttons">
-    <a href="bold-forester-images/bold-forester-menus/drinks-menu/updated-drinks-menu-25th-feb.html">Drinks Menu</a>
+    <a href="Royal-Oak-images/Royal-Oak-Menus/drinks-menu/0-Drinks.html">Drinks Menu</a>
     <a href="menus/lambinn-wine.html">Wine List</a>
-    <a href="bold-forester-images/bold-forester-menus/cocktail-menu/Cocktail-Menu-2025.html">Cocktail Menu</a>
+    <a href="Royal-Oak-images/Royal-Oak-Menus/cocktail-menu/Drinks-list-1.html">Cocktail Menu</a>
   </div>
 
   <!-- Events Section -->
