--- a/royaloak.html
+++ b/royaloak.html
@@ -164,52 +164,31 @@
     <a href="Royal-Oak-images/Royal-Oak-Menus/cocktail-menu/Drinks-list-1.html">Cocktail Menu</a>
   </div>
 
-  <!-- Events Section -->
-  <h2>Events</h2>
-  <div class="card-grid">
-    <div class="card">
-      <img src="events/event1.jpg" alt="Quiz Night">
-      <h3>Quiz Night</h3>
-      <p>Join us for a fun evening of trivia every Thursday at 7:30pm.</p>
-    </div>
-    <div class="card">
-      <img src="events/event2.jpg" alt="Live Music">
-      <h3>Live Music</h3>
-      <p>Enjoy local talent performing every last Friday of the month.</p>
-    </div>
-  </div>
-
-  <!-- Promotions Section -->
-  <h2>Promotions</h2>
-  <div class="card-grid">
-    <div class="card">
-      <img src="promotions/promo1.jpg" alt="Burger Mondays">
-      <h3>Burger Mondays</h3>
-      <p>Buy any burger and get a free pint every Monday.</p>
-    </div>
-    <div class="card">
-      <img src="promotions/promo2.jpg" alt="Wine Wednesday">
-      <h3>Wine Wednesday</h3>
-      <p>20% off all bottles of wine, every Wednesday.</p>
-    </div>
+ <!-- Links to Events & Promotions -->
+  <h2>What’s On</h2>
+  <div class="buttons">
+    <a href="Royal-Oak-images/Events-Promotions/events.html">View Events</a>
+    <a href="bold-forester-images/Events-Promotions/promotions.html">View Promotions</a>
   </div>
 
   <!-- Social Media Section -->
   <h2>Follow Us</h2>
-  <div class="social-links">
-    <a href="https://www.facebook.com/theboldforester">Facebook</a>
-    <a href="https://www.instagram.com/theboldforester">Instagram</a>
-    <a href="https://www.tiktok.com/@theboldforester">TikTok</a>
-  </div>
+  <div class="social-scroll">
+    <a href="https://www.facebook.com/p/The-Bold-Forester-New-Forest-100063726363407/" class="social-card">Facebook</a>
+    <a href="https://www.instagram.com/the_bold_forester/" class="social-card">Instagram</a>
+    <a href="https://www.tiktok.com/@theboldforester_" class="social-card">TikTok</a>
+    <a href="https://twitter.com/ForesterBold" class="social-card">X</a>
+   </div>
 
   <h2>Extras</h2>
   <div class="buttons">
-    <a href="https://www.theboldforesternewforest.co.uk/">Official Website</a>
+    <a href="https://www.theroyaloakbeaulieu.co.uk/food/#restaurant_form">Book a Table</a>
+    <a href="https://www.theroyaloakbeaulieu.co.uk/">Official Website</a>
     <a href="home.html">⬅ Back to Home</a>
   </div>
 
   <footer>
-    © 2025 Country Inns – The Bold Forester
+    © 2025 Country Inns – The Royal Oak
   </footer>
 </body>
 </html>
