--- a/royaloak.html
+++ b/royaloak.html
@@ -174,10 +174,10 @@
   <!-- Social Media Section -->
   <h2>Follow Us</h2>
   <div class="social-scroll">
-    <a href="https://www.facebook.com/p/The-Bold-Forester-New-Forest-100063726363407/" class="social-card">Facebook</a>
-    <a href="https://www.instagram.com/the_bold_forester/" class="social-card">Instagram</a>
-    <a href="https://www.tiktok.com/@theboldforester_" class="social-card">TikTok</a>
-    <a href="https://twitter.com/ForesterBold" class="social-card">X</a>
+    <a href="https://www.facebook.com/theroyaloakhilltop/" class="social-card">Facebook</a>
+    <a href="https://www.instagram.com/theroyaloakbeaulieu2021/" class="social-card">Instagram</a>
+    <a href="https://www.tiktok.com/@royaloakbeaulieu" class="social-card">TikTok</a>
+    <a href="https://x.com/Royal_Oak1" class="social-card">X</a>
    </div>
 
   <h2>Extras</h2>
