--- a/royaloak.html
+++ b/royaloak.html
@@ -18,7 +18,6 @@
       background-color: rgba(34, 49, 34, 0.9);
       padding: 1.5rem;
     }
-
     header h1 {
       margin: 0;
       font-size: 2rem;
@@ -34,7 +33,7 @@
       position: relative;
       width: 100%;
       height: 220px;
-      background: url("images/lambinn.jpg") center/cover no-repeat;
+      background: url("images/royaloak.jpg") center/cover no-repeat;
     }
 
     .content {
@@ -48,13 +47,13 @@
       margin-top: 2rem;
     }
 
+    /* Buttons */
     .buttons {
       display: flex;
       flex-direction: column;
       gap: 1rem;
       margin-top: 1rem;
     }
-
     .buttons a {
       display: block;
       background: #3c5a3c;
@@ -65,70 +64,39 @@
       font-weight: bold;
       transition: background 0.3s;
     }
-
     .buttons a:hover {
       background: #4f7c4f;
     }
 
-    /* Cards layout for Events, Promotions, Social */
-    .card-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1.5rem;
-      margin: 1.5rem 0;
-      padding: 0 1rem;
+    /* Social scroll */
+    .social-scroll {
+      display: flex;
+      overflow-x: auto;
+      gap: 1rem;
+      padding: 1rem 0;
+      scroll-snap-type: x mandatory;
+      -webkit-overflow-scrolling: touch;
     }
-
-    .card {
-      background: #3c5a3c;
-      border-radius: 10px;
+    .social-scroll::-webkit-scrollbar {
+      display: none;
+    }
+    .social-card {
+      flex: 0 0 auto;
+      min-width: 150px;
       padding: 1rem;
       text-align: center;
-      transition: transform 0.2s;
-    }
-
-    .card:hover {
-      transform: translateY(-5px);
-    }
-
-    .card img {
-      max-width: 100%;
-      height: 140px;
-      object-fit: cover;
-      border-radius: 8px;
-      margin-bottom: 0.5rem;
-    }
-
-    .card h3 {
-      color: #e6d8b5;
-      margin: 0.5rem 0;
-    }
-
-    .card p {
-      font-size: 0.9rem;
-    }
-
-    /* Social icons */
-    .social-links {
-      display: flex;
-      justify-content: center;
-      gap: 1rem;
-      margin-top: 1rem;
-    }
-
-    .social-links a {
-      display: inline-block;
-      background: #e6d8b5;
-      color: #2e472e;
-      font-weight: bold;
+      background: #f9f9f9;
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       text-decoration: none;
-      padding: 0.6rem 1rem;
-      border-radius: 6px;
-      transition: background 0.3s;
+      color: #333;
+      font-weight: bold;
+      scroll-snap-align: start;
+      transition: transform 0.2s ease, background 0.2s ease;
     }
-
-    .social-links a:hover {
-      background: #fff2cc;
+    .social-card:hover {
+      transform: translateY(-3px);
+      background: #ececec;
     }
 
     footer {
@@ -141,12 +109,12 @@
 </head>
 <body>
   <header>
-    <img src="The Royal Oak.png" alt="The Royao Oak Logo" class="logo">
+    <img src="The Royal Oak.png" alt="The Royal Oak Logo" class="logo">
   </header>
 
   <section>
     <div class="about">
-      <p>Welcome to The Royal Oak, Beaulieu — a cosy country pub at the heart of the New Forest. Explore our menus, book a table, and see what’s on</p>
+      <p>Welcome to The Royal Oak, Beaulieu — a cosy country pub at the heart of the New Forest. Explore our menus, book a table, and see what’s on.</p>
     </div>
   </section>
 
@@ -164,21 +132,19 @@
     <a href="Royal-Oak-images/Royal-Oak-Menus/cocktail-menu/Drinks-list-1.html">Cocktail Menu</a>
   </div>
 
- <!-- Links to Events & Promotions -->
   <h2>What’s On</h2>
   <div class="buttons">
     <a href="Royal-Oak-images/Events-Promotions/events.html">View Events</a>
-    <a href="bold-forester-images/Events-Promotions/promotions.html">View Promotions</a>
+    <a href="Royal-Oak-images/Events-Promotions/promotions.html">View Promotions</a>
   </div>
 
- <!-- Social Media Section -->
-<h2>Follow Us</h2>
-<div class="social-links">
-  <a href="https://www.facebook.com/p/theroyaloakhilltop/">Facebook</a>
-  <a href="https://www.instagram.com/theroyaloakbeaulieu2021/">Instagram</a>
-  <a href="https://www.tiktok.com/@royaloakbeaulieu">TikTok</a>
-  <a href="https://twitter.com/Royal_Oak1">X</a>
-</div>
+  <h2>Follow Us</h2>
+  <div class="social-scroll">
+    <a href="https://www.facebook.com/p/theroyaloakhilltop/" class="social-card">Facebook</a>
+    <a href="https://www.instagram.com/theroyaloakbeaulieu2021/" class="social-card">Instagram</a>
+    <a href="https://www.tiktok.com/@royaloakbeaulieu" class="social-card">TikTok</a>
+    <a href="https://twitter.com/Royal_Oak1" class="social-card">X</a>
+  </div>
 
   <h2>Extras</h2>
   <div class="buttons">
