--- a/New-Forest-Inn-images/Christmas/New-Forest-Inn-Christmas.html
+++ b/New-Forest-Inn-images/Christmas/New-Forest-Inn-Christmas.html
@@ -97,21 +97,21 @@
   <main>
     <div class="card-grid">
       <div class="card">
-        <img src="New-Forest-Inn-images/Christmas/Christmas-Party-Menu-1.png">
+        <img src="Christmas-Party-Menu-1.png">
         <h3>Christmas Party Menu 2025</h3>
         <p>
           Celebrate this festive season with us
         </p>
       </div>
       <div class="card">
-        <img src="New-Forest-Inn-images/Christmas/Christmas-Day-Menu.png">
+        <img src="Christmas-Day-Menu.png">
         <h3>Christmas Day Menu 2025</h3>
         <p>
           Let us do all the cooking
         </p>
       </div>
       <div class="card">
-        <img src="New-Forest-Inn-images/Christmas/Festive-Feast-Menu-Christmas-2025.jpg">
+        <img src="Festive-Feast-Menu-Christmas-2025.jpg">
         <h3>Christmas Festive Feast Menu 2025</h3>
         <p>
           Come and have a Christmas Feast this season
