--- a/woolpack.html
+++ b/woolpack.html
@@ -3,11 +3,159 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>The Woolpack</title>
+  <title>The Bold Forester – Country Inns</title>
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      background: linear-gradient(180deg, #2e472e, #1e2b1e);
+      color: #f4f4f4;
+      text-align: center;
+    }
+
+    header {
+      background-color: rgba(34, 49, 34, 0.9);
+      padding: 1.5rem;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2rem;
+      color: #e6d8b5;
+    }
+
+    .logo {
+      margin: 1rem auto;
+      max-width: 140px;
+    }
+
+    .hero {
+      position: relative;
+      width: 100%;
+      height: 220px;
+      background: url("images/lambinn.jpg") center/cover no-repeat;
+    }
+
+    .content {
+      padding: 1.5rem;
+      max-width: 800px;
+      margin: auto;
+    }
+
+    h2 {
+      color: #e6d8b5;
+      margin-top: 2rem;
+    }
+
+    /* Buttons */
+    .buttons {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      margin-top: 1rem;
+    }
+    .buttons a {
+      display: block;
+      background: #3c5a3c;
+      color: #fff;
+      text-decoration: none;
+      padding: 1rem;
+      border-radius: 8px;
+      font-weight: bold;
+      transition: background 0.3s;
+    }
+    .buttons a:hover {
+      background: #4f7c4f;
+    }
+
+    /* Social scroll */
+    .social-scroll {
+      display: flex;
+      overflow-x: auto;
+      gap: 1rem;
+      padding: 1rem 0;
+      scroll-snap-type: x mandatory;
+      -webkit-overflow-scrolling: touch;
+    }
+    .social-scroll::-webkit-scrollbar {
+      display: none;
+    }
+    .social-card {
+      flex: 0 0 auto;
+      min-width: 150px;
+      padding: 1rem;
+      text-align: center;
+      background: #f9f9f9;
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      text-decoration: none;
+      color: #333;
+      font-weight: bold;
+      scroll-snap-align: start;
+      transition: transform 0.2s ease, background 0.2s ease;
+    }
+    .social-card:hover {
+      transform: translateY(-3px);
+      background: #ececec;
+    }
+
+    footer {
+      margin-top: 2rem;
+      padding: 1rem;
+      font-size: 0.9rem;
+      background: rgba(0, 0, 0, 0.2);
+    }
+  </style>
 </head>
 <body>
-  <h1>The Woolpack</h1>
-  <p>Welcome to The Woolpack. Menus, Events & Promotions coming soon!</p>
-  <p><a href="home.html">← Back to Home</a></p>
-</body>
-</html>
+  <header>
+    <img src="The Bold Forester.jpg" alt="The Bold Forester Logo" class="logo">
+  </header>
+
+  <section>
+    <div class="about">
+      <p>Welcome to The Bold Forester, Marchwood — a cosy country pub at the heart of the New Forest. Explore our menus, book a table, and see what’s on.</p>
+    </div>
+  </section>
+
+  <h2>Food Menus</h2>
+  <div class="buttons">
+    <a href="bold-forester-images/bold-forester-menus/main-menu/NEW-MENU-SPRING-SUMMER-2025.html">Menu</a>
+    <a href="bold-forester-images/bold-forester-menus/sunday-menu/NEW-SUNDAY-MENU-SPRING-SUMMER-2025.html">Sunday Menu</a>
+    <a href="bold-forester-images/bold-forester-menus/kids-menu/Tiny-Tums-Menu-2025.html">Kids Menu</a>
+    <a href="bold-forester-images/bold-forester-menus/desserts-menu/New-Dessert-Menu-2025.html">Desserts Menu</a>
+    <a href="bold-forester-images/Christmas/Bold-Christmas.html">Christmas Menus 2025</a>
+  </div>
+
+  <h2>Drink Menus</h2>
+  <div class="buttons">
+    <a href="bold-forester-images/bold-forester-menus/drinks-menu/updated-drinks-menu-25th-feb.html">Drinks Menu</a>
+    <a href="menus/lambinn-wine.html">Wine List</a>
+    <a href="bold-forester-images/bold-forester-menus/cocktail-menu/Cocktail-Menu-2025.html">Cocktail Menu</a>
+  </div>
+
+  <h2>What’s On</h2>
+  <div class="buttons">
+    <a href="bold-forester-images/Events-Promotions/events.html">View Events</a>
+    <a href="bold-forester-images/Events-Promotions/promotions.html">View Promotions</a>
+  </div>
+
+  <h2>Follow Us</h2>
+  <div class="social-scroll">
+    <a href="https://www.facebook.com/p/The-Bold-Forester-New-Forest-100063726363407/" class="social-card">Facebook</a>
+    <a href="https://www.instagram.com/the_bold_forester/" class="social-card">Instagram</a>
+    <a href="https://www.tiktok.com/@theboldforester_" class="social-card">TikTok</a>
+    <a href="https://twitter.com/ForesterBold" class="social-card">X</a>
+    <a href="https://www.linkedin.com/company/the-bold-forester-new-forest/" class="social-card">LinkedIn</a>
+  </div>
+
+  <h2>Extras</h2>
+  <div class="buttons">
+    <a href="https://www.theboldforesternewforest.co.uk/food/#restaurant_form">Book a Table</a>
+    <a href="https://www.theboldforesternewforest.co.uk/">Official Website</a>
+    <a href="home.html">⬅ Back to Home</a>
+  </div>
+
+  <footer>
+    © 2025 Country Inns – The Bold Forester
+  </footer>
