--- a/home.html
+++ b/home.html
@@ -168,7 +168,7 @@
       <div class="event-card">
         <img src="https://images.unsplash.com/photo-1528605248644-14dd04022da1?auto=format&fit=crop&w=800&q=80" alt="Festive Feast">
         <h3>Festive Feast</h3>
-        <p>Book early & save £5 per head on our December feast menu.</p>
+        <p>Book early (before the 31st of October) & save £5 per head on our December Festive Feast Menu.</p>
         
       </div>
        <div class="event-card">
