--- a/home.html
+++ b/home.html
@@ -191,7 +191,7 @@
       </div>
       <div class="event-card">
         <img src="Local Ales & Fine Wines.png?auto=format&fit=crop&w=800&q=80" alt="Local Ales & Fine Wines">
-        <h3>Local Ales & Fine Wines</h3>
+        <h3>Pouring Quality</h3>
         <p>Discover our fine local ales, and our carefully chosen wines, available across all Country Inns pubs.</p>
         
       </div>
