--- a/local.html
+++ b/local.html
@@ -52,6 +52,9 @@
       height: auto;
       border-radius: 8px;
       margin-bottom: 1rem;
+      display: block;
+      margin-left: auto;
+      margin-right: auto; /* centers the image */
     }
 
     .card h3 {
@@ -97,8 +100,8 @@
   <main>
     <div class="card-grid">
       <div class="card">
-        <img src="berrys bakery-190x190.png"
-        <h3>🍰 Traditional & handcrafted bakes</h3>
+        <img src="berrys bakery-190x190.png" alt="Berry’s Bakery">
+        <h3>🍰 Traditional & Handcrafted Bakes</h3>
         <p>
           Berry’s Bakery supplies us with delicious fresh cakes, perfect with a cuppa or as a sweet treat after your meal.
           Lovingly baked by hand and full of flavour, they’re a true local indulgence.
@@ -107,6 +110,8 @@
     </div>
   </main>
 
-<div class="buttons">
-  <a href="../../home.html">⬅ Back to Home</a>
-</div>
+  <div class="buttons">
+    <a href="home.html">⬅ Back to Home</a>
+  </div>
+</body>
+</html>
