--- a/local.html
+++ b/local.html
@@ -111,10 +111,11 @@
 
       <!-- Card 2 -->
       <div class="card">
-        <img src="local-produce.jpg" alt="Local Produce">
-        <h3>🥕 Fresh from Local Farms</h3>
+        <img src="Exmoor_ales_logo.png" alt="Local Produce">
+        <h3>🍺 Bold beers from the heart of Somerset</h3>
         <p>
-          Our fruit and vegetables are sourced from nearby farms, ensuring freshness while supporting the community.
+          Known for their award-winning ales like Exmoor Gold, Ale, Stag, Fox, and Beast, 
+          this independent brewery keeps our taps fresh, local, and full of character.
         </p>
       </div>
 
