--- a/local.html
+++ b/local.html
@@ -111,7 +111,7 @@
 
       <!-- Card 2 -->
       <div class="card">
-        <img src="Exmoor_ales_logo.png" alt="Local Produce">
+        <img src="Exmoor_ales_logo.png" alt="Exmoor Ales">
         <h3>🍺 Bold beers from the heart of Somerset</h3>
         <p>
           Known for their award-winning ales like Exmoor Gold, Ale, Stag, Fox, and Beast, 
@@ -121,10 +121,11 @@
 
       <!-- Card 3 -->
       <div class="card">
-        <img src="local-meat.jpg" alt="Butcher">
-        <h3>🥩 Quality Meats</h3>
+        <img src="hopback-logo-High-res.jpg" alt="Hopback Real Ales">
+        <h3>🍻 Innovative beers with heritage</h3>
         <p>
-          We partner with trusted local butchers to bring you the best cuts, full of flavour and responsibly sourced.
+          From the iconic Summer Lightning to rich seasonal brews, Hop Back keeps beer lovers 
+          coming back for more, brewed just down the road in Wiltshire.
         </p>
       </div>
 
