--- a/local.html
+++ b/local.html
@@ -121,7 +121,7 @@
 
       <!-- Card 3 -->
       <div class="card">
-        <img src="hopback-logo-High-res.jpg" alt="Hopback Real Ales">
+        <img src="hopback-logo.png" alt="Hopback Real Ales">
         <h3>🍻 Innovative beers with heritage</h3>
         <p>
           From the iconic Summer Lightning to rich seasonal brews, Hop Back keeps beer lovers 
