--- a/local.html
+++ b/local.html
@@ -131,10 +131,11 @@
 
       <!-- Card 4 -->
       <div class="card">
-        <img src="local-dairy.jpg" alt="Dairy">
-        <h3>🧀 Dairy Goodness</h3>
+        <img src="Eight-Two-O-logo.webp" alt="Dairy">
+        <h3>🍸 Small-batch spirits, Big flavour</h3>
         <p>
-          Fresh milk, cream and artisan cheeses come from family-run dairies right here in Hampshire.
+          Locally distilled and crafted with care, 8 Two O Spirits adds a premium touch 
+          to our bar, whether you're after a classic G&T or a signature cocktail.
         </p>
       </div>
 
