--- a/local.html
+++ b/local.html
@@ -131,7 +131,7 @@
 
       <!-- Card 4 -->
       <div class="card">
-        <img src="Eight-Two-O-logo.webp" alt="Dairy">
+        <img src="Eight-Two-O-logo.webp" alt="Spirits">
         <h3>🍸 Small-batch spirits, Big flavour</h3>
         <p>
           Locally distilled and crafted with care, 8 Two O Spirits adds a premium touch 
@@ -141,19 +141,22 @@
 
       <!-- Card 5 -->
       <div class="card">
-        <img src="local-brewery.jpg" alt="Brewery">
-        <h3>🍺 Crafted Beers</h3>
+        <img src="New Forest Ice Cream logo.png" alt="Ice Cream">
+        <h3>🍦 Family-made, New Forest loved</h3>
         <p>
-          We proudly pour ales and lagers brewed just around the corner by passionate local brewers.
+          From creamy vanilla to indulgent toffee fudge, this family-run company supplies 
+          our kitchens with real-deal, rich ice cream, the perfect dessert finisher.
         </p>
       </div>
 
       <!-- Card 6 -->
       <div class="card">
-        <img src="local-distillery.jpg" alt="Distillery">
-        <h3>🥃 Distilled with Care</h3>
+        <img src="New Forest Shortbread Logo.avif alt="Shortbread">
+        <h3>🍪 Baked with local butter and charm</h3>
         <p>
-          Spirits and gins from New Forest distilleries make our cocktails truly one-of-a-kind.
+          Available to purchase in select Country Inns pubs, these handcrafted treats make the perfect souvenir 
+          or snack for the journey home. Lovingly made in the heart of the New Forest, this shortbread reflects 
+          the same care and quality we pour into everything we do, simple, traditional, and full of flavour. 
         </p>
       </div>
     </div>
