--- a/local.html
+++ b/local.html
@@ -151,7 +151,7 @@
 
       <!-- Card 6 -->
       <div class="card">
-        <img src="New Forest Shortbread Logo.avif alt="Shortbread">
+        <img src="New Forest Shortbread.png" alt="Shortbread">
         <h3>🍪 Baked with local butter and charm</h3>
         <p>
           Available to purchase in select Country Inns pubs, these handcrafted treats make the perfect souvenir 
