--- a/home.html
+++ b/home.html
@@ -239,6 +239,10 @@
         <img src="New-Forest-Inn-images/NFI.jpg" alt="The New Forest Inn">
         <span>The New Forest Inn</span>
       </a>
+      <a class="pub-tile" href="find-us.html">
+        <img src="find us.png" alt="Find our nearest Pub">
+        <span>Find Our Nearest Pub</span>
+      </a>
     </div>
   </section>
 
