--- a/find-us.html
+++ b/find-us.html
@@ -100,5 +100,10 @@
       pubListDiv.appendChild(listItem);
     });
   </script>
+  
+  <div class="buttons">
+    <a href="home.html">⬅ Back to Home</a>
+  </div>
+  
 </body>
 </html>
