--- a/find-us.html
+++ b/find-us.html
@@ -3,28 +3,46 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Country Inns Map</title>
+  <title>Find Our Nearest Pub</title>
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <style>
-    html, body {
+    body {
+      font-family: 'Segoe UI', sans-serif;
       margin: 0;
-      padding: 0;
-      height: 100%;
-      font-family: sans-serif;
+      background: linear-gradient(180deg, #2e472e, #1e2b1e);
+      color: #f4f4f4;
+      text-align: center;
+    }
+
+    header {
+      padding: 1.5rem;
+      background: rgba(34, 49, 34, 0.9);
+      color: #e6d8b5;
+    }
+
+    h1 {
+      margin: 0;
+      font-size: 2rem;
     }
 
     .container {
       display: flex;
       flex-direction: row;
-      height: 100vh;
+      height: 70vh;
+      margin: 1.5rem;
+      border-radius: 12px;
+      overflow: hidden;
     }
 
     #sidebar {
       width: 300px;
       overflow-y: auto;
       padding: 15px;
-      background: #f9f9f9;
+      background: #2e472e;
+      color: #f4f4f4;
       box-sizing: border-box;
+      text-align: left;
     }
 
     #map {
@@ -34,10 +52,14 @@
     .pub-item {
       cursor: pointer;
       margin-bottom: 10px;
+      padding: 8px;
+      border-radius: 6px;
+      background: #3c5a3c;
+      transition: background 0.3s;
     }
 
     .pub-item:hover {
-      text-decoration: underline;
+      background: #4f7c4f;
     }
 
     @media (max-width: 768px) {
@@ -54,15 +76,48 @@
         height: 60%;
       }
     }
+
+    .buttons {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      margin: 2rem auto;
+      max-width: 300px;
+    }
+
+    .buttons a {
+      display: block;
+      background: #3c5a3c;
+      color: #fff;
+      text-decoration: none;
+      padding: 1rem;
+      border-radius: 8px;
+      font-weight: bold;
+      transition: background 0.3s;
+    }
+
+    .buttons a:hover {
+      background: #4f7c4f;
+    }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div id="sidebar">
-      <h2>Find your nearest Country Inns Pub</h2>
-      <div id="pub-list"></div>
+  <header>
+    <h1>Find Your Nearest Country Inns Pub</h1>
+  </header>
+
+  <main>
+    <div class="container">
+      <div id="sidebar">
+        <h2>Pubs</h2>
+        <div id="pub-list"></div>
+      </div>
+      <div id="map"></div>
     </div>
-    <div id="map"></div>
+  </main>
+
+  <div class="buttons">
+    <a href="home.html">⬅ Back to Home</a>
   </div>
 
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
@@ -100,10 +155,5 @@
       pubListDiv.appendChild(listItem);
     });
   </script>
-  
-  <div class="buttons">
-    <a href="home.html">⬅ Back to Home</a>
-  </div>
-  
 </body>
 </html>
