--- a/home.html
+++ b/home.html
@@ -160,7 +160,7 @@
   <!-- Header -->
   <header>
     <h1>Welcome to Country Inns</h1>
-    <p>Discover our 7 pubs in the heart of the New Forest</p>
+    <h3>Discover our 7 pubs in the heart of the New Forest</h3>
   </header>
 
   <!-- Featured at Every Pub -->
