--- a/trustyservant.html
+++ b/trustyservant.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>The New Forest Inn – Country Inns</title>
+  <title>The Trusty Servant Inn – Country Inns</title>
   <link rel="stylesheet" href="style.css" />
   <style>
     body {
@@ -114,23 +114,23 @@
 </head>
 <body>
   <header>
-    <img src="The New Forest Inn.png" alt="The New Forest Inn Logo" class="logo">
+    <img src="The Trusty Servant.png" alt="The Trusty Servant Inn Logo" class="logo">
   </header>
 
   <section>
     <div class="about">
-      <p>Welcome to The New Forest Inn, Emmery Down — a cosy country pub at the heart of the New Forest. Explore our menus, book a room, reserve a table, and see what’s on</p>
+      <p>Welcome to The Trusty Servant Inn, Minstead — a cosy country pub at the heart of the New Forest. Explore our menus, book a room, reserve a table, and see what’s on</p>
     </div>
   </section>
 
   <h2>Food Menus</h2>
   <div class="buttons">
-    <a href="New-Forest-Inn-images/New-Forest-Inn-Menus/breakfast-menu/Breakfast-Menu-dec-2024.html">Breakfast Menu</a>
-    <a href="New-Forest-Inn-images/New-Forest-Inn-Menus/main-menu/Main-Menu-Spring-2025_1.html">Menu</a>
-    <a href="New-Forest-Inn-images/New-Forest-Inn-Menus/sunday-menu/Sunday-Menu-Spring-2025.html">Sunday Menu</a>
-    <a href="New-Forest-Inn-images/New-Forest-Inn-Menus/kids-menu/News-kids-2-25.html">Kids Menu</a>
-    <a href="New-Forest-Inn-images/New-Forest-Inn-Menus/desserts-menu/Dessert-Menu-25.html">Desserts Menu</a>
-    <a href="New-Forest-Inn-images/Christmas/New-Forest-Inn-Christmas.html">Christmas Menus 2025</a>
+    <a href="Trusty-Servant-images/Trusty-Servant-Menus/breakfast-menu/Breakfast-Menu-Oct-2024.html">Breakfast Menu</a>
+    <a href="Trusty-Servant-images/Trusty-Servant-Menus/main-menu/Laz-Spring-Garden-Menu.html">Menu</a>
+    <a href="Trusty-Servant-images/Trusty-Servant-Menus/sunday-menu/Laz-Spring-Sunday-Menu-.html">Sunday Menu</a>
+    <a href="Trusty-Servant-images/Trusty-Servant-Menus/kids-menu/Tiny-tums-menu.html">Kids Menu</a>
+    <a href="Trusty-Servant-images/Trusty-Servant-Menus/desserts-menu/March-24-dessert-menu.html">Desserts Menu</a>
+    <a href="Trusty-Servant-images/Christmas/Trusty-Christmas.html">Christmas Menus 2025</a>
   </div>
 
   <h2>Drink Menus</h2>
@@ -150,26 +150,23 @@
   <!-- Social Media Section -->
   <h2>Follow Us</h2>
   <div class="social-scroll">
-    <a href="https://www.facebook.com/FightingCocksPub/" class="social-card">Facebook</a>
-    <a href="https://www.instagram.com/the_bold_forester/" class="social-card">Instagram</a>
-    <a href="https://www.tiktok.com/@fightingcocks2023" class="social-card">TikTok</a>
-    <a href="https://x.com/cocks_pub" class="social-card">X</a>
+    <a href="https://www.facebook.com/trustyservantinn/" class="social-card">Facebook</a>
+    <a href="https://www.instagram.com/trustyservantinn/" class="social-card">Instagram</a>
+    <a href="https://www.tiktok.com/@trustyservantinn" class="social-card">TikTok</a>
+    <a href="https://x.com/TrustyServant1" class="social-card">X</a>
   </div>
 
   <h2>Extras</h2>
   <div class="buttons">
-    <a href="https://thefightingcockspub.co.uk/food/#restaurant_form">Book a Table</a>
-    <a href="https://web-bookings.hotels.uk.com/#/booking/51730/items/availability?k=XbkHpDevv1inahpI6xTpMVzFxNTE3MzA%3D&r=1757344029010">Book a Room</a>
-    <a href="https://thefightingcockspub.co.uk/">Official Website</a>
+    <a href="https://www.thetrustyservant.co.uk/food/#restaurant_form">Book a Table</a>
+    <a href="https://web-bookings.hotels.uk.com/#/booking/46270/items/availability?k=8NvS5v6pFtbqgO4xncljzOBc2NDYyNzA%3D&r=1757433900969">Book a Room</a>
+    <a href="https://www.thetrustyservant.co.uk/">Official Website</a>
     <a href="home.html">⬅ Back to Home</a>
   </div>
 
   <footer>
-    © 2025 Country Inns – The Fighting Cocks
+    © 2025 Country Inns – The Trusty Servant Inn
   </footer>
 </body>
 </html>
-    © 2025 Country Inns – The Royal Oak
-  </footer>
-</body>
-</html>
+    
