--- a/newforestinn.html
+++ b/newforestinn.html
@@ -165,11 +165,8 @@
   </div>
 
   <footer>
-    © 2025 Country Inns – The Fighting Cocks
+    © 2025 Country Inns – The New Forest Inn
   </footer>
 </body>
 </html>
-    © 2025 Country Inns – The Royal Oak
-  </footer>
-</body>
-</html>
+  
