--- a/woolpack.html
+++ b/woolpack.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>The Bold Forester – Country Inns</title>
+  <title>The Woolpack – Country Inns</title>
   <link rel="stylesheet" href="style.css" />
   <style>
     body {
@@ -109,29 +109,26 @@
 </head>
 <body>
   <header>
-    <img src="The Bold Forester.jpg" alt="The Bold Forester Logo" class="logo">
+    <img src="The Woolpack.png" alt="The Woolpack Logo" class="logo">
   </header>
 
   <section>
     <div class="about">
-      <p>Welcome to The Bold Forester, Marchwood — a cosy country pub at the heart of the New Forest. Explore our menus, book a table, and see what’s on.</p>
+      <p>Welcome to The Woolpack, Sopley — a cosy country pub at the heart of the New Forest. Explore our menus, book a table, and see what’s on.</p>
     </div>
   </section>
 
   <h2>Food Menus</h2>
   <div class="buttons">
-    <a href="bold-forester-images/bold-forester-menus/main-menu/NEW-MENU-SPRING-SUMMER-2025.html">Menu</a>
-    <a href="bold-forester-images/bold-forester-menus/sunday-menu/NEW-SUNDAY-MENU-SPRING-SUMMER-2025.html">Sunday Menu</a>
-    <a href="bold-forester-images/bold-forester-menus/kids-menu/Tiny-Tums-Menu-2025.html">Kids Menu</a>
-    <a href="bold-forester-images/bold-forester-menus/desserts-menu/New-Dessert-Menu-2025.html">Desserts Menu</a>
-    <a href="bold-forester-images/Christmas/Bold-Christmas.html">Christmas Menus 2025</a>
+    <a href="Woolpack-images/Woolpack-Menus/main-menu/summer-menu-2025.html">Menu</a>
+    <a href="Woolpack-images/Woolpack-Menus/sunday-menu/Summer-sunday-menu-2025(3).html">Sunday Menu</a>
+    <a href="Woolpack-images/Woolpack-Menus/2 Course-menu/Summer-2-course.html">2 Course Menu</a>
+    <a href="Woolpack-images/Christmas/Woolpack-Christmas.html">Christmas Menus 2025</a>
   </div>
 
   <h2>Drink Menus</h2>
   <div class="buttons">
-    <a href="bold-forester-images/bold-forester-menus/drinks-menu/updated-drinks-menu-25th-feb.html">Drinks Menu</a>
     <a href="menus/lambinn-wine.html">Wine List</a>
-    <a href="bold-forester-images/bold-forester-menus/cocktail-menu/Cocktail-Menu-2025.html">Cocktail Menu</a>
   </div>
 
   <h2>What’s On</h2>
@@ -142,7 +139,7 @@
 
   <h2>Follow Us</h2>
   <div class="social-scroll">
-    <a href="https://www.facebook.com/p/The-Bold-Forester-New-Forest-100063726363407/" class="social-card">Facebook</a>
+    <a href="https://en-gb.facebook.com/thewoolpacksopley/" class="social-card">Facebook</a>
     <a href="https://www.instagram.com/the_bold_forester/" class="social-card">Instagram</a>
     <a href="https://www.tiktok.com/@theboldforester_" class="social-card">TikTok</a>
     <a href="https://twitter.com/ForesterBold" class="social-card">X</a>
